migrate to openjdk16